--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -54,10 +54,10 @@ $color-institucional: #ff8f00
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #34A3ED
-$color-secundario: #276499
-$color-acento-contenido: #EE296D
-$color-acento-botones: #FDBE41
+$color-primario: #522981
+$color-secundario: #7DD3E9
+$color-acento-contenido: #FF4A69
+$color-acento-botones: #FFCD0D
 
 // Color Tipografias -----------------------------------
 $color-headers: $color-sistema-texto
@@ -76,7 +76,7 @@ $color-btn-fondo: $color-acento-botones
 $color-btn-texto: $color-sistema-texto
 
 // Colores banner --------------------------------------
-$color-banner-fondo: $white
+$color-banner-fondo: $color-primario
 $color-banner-text: $white
 
 // Colores anexos
@@ -179,7 +179,8 @@ $bp-max-xs: 576px
 // -----------------------------------------------------
 // COMPONENTES -----------------------------------------
 // -----------------------------------------------------
-  
+.actividad
+  background-color: #F2F2F2  
 // Imágen banner principal -----------------------------
 $banner-principal-img-y: '' // 'arriba','abajo',''
 $banner-principal-img-x: '' // 'derecha',''
@@ -187,8 +188,6 @@ $banner-principal-img-x: '' // 'derecha',''
 // .tarjeta-avatar -----------------------------------
 $tarjeta-avatar-b-ancho-img: 20%
 $tarjeta-avatar-ancho-img: 150px
-.actividad
-  background-color: #F2F2F2
 
 
 // -----------------------------------------------------
