--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -170,6 +170,9 @@
   position: relative
   left: 20px !important
 
+.tarjeta.color-primario *
+  color: black
+
 .bg-color1
   margin-inline: -3.2rem !important
 
